Fix horizontal scrollbar appearing on index page, and add some left padding

--- a/public/css/index/index.index.css
+++ b/public/css/index/index.index.css
@@ -1,8 +1,4 @@
 
-div.viewWrapper {
-  width: 100% !important;
-}
-
 div.viewWrapperSlicer,div.viewWrapperBrowser {
   font-family: 'Lucida Grande', 'Lucida Sans Unicode', helvetica, arial, Verdana, sans-serif;
   font-size: 13px;
@@ -79,6 +75,10 @@ div.extensionNameWrapper,div.subtitleWrapper {
 
 div.extensionRatings form {
   display: inline;
+}
+
+div.categoryList {
+  padding-left: 5px;
 }
 
 img.extensionIcon {
